// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`declastruct CLI workflow given: a declastruct resources file when: [t0] plan is created via declastruct CLI then: plan output matches snapshot 1`] = `
{
  "resourceClasses": [
    "DeclaredGithubRepo",
    "DeclaredGithubRepoConfig",
    "DeclaredGithubEnvironment",
    "DeclaredGithubEnvironment",
    "DeclaredGithubEnvironment",
    "DeclaredGithubRepoRuleset",
    "DeclaredGithubTeam",
    "DeclaredGithubTeam",
    "DeclaredGithubTeamMembership",
    "DeclaredGithubTeamRepoAccess",
  ],
  "resourceCount": 10,
}
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t2] CLI help output is requested then: apply --help shows usage information: apply --help output 1`] = `
"Usage: declastruct apply [options]

Apply changes from a plan file

Options:
  --plan <file>  Path to plan file, or "yolo" for immediate apply
  --wish <file>  Path to wish file (required when --plan yolo)
  -h, --help     display help for command
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t2] CLI help output is requested then: plan --help shows usage information: plan --help output 1`] = `
"Usage: declastruct plan --wish <file> --into <file> [-- <wish-args>]

Generate a change plan from a wish file

Options:
  --wish <file>  Path to wish file
  --into <file>  Path to output plan file
  --snap <file>  Path to output snapshot file
  -h, --help     display help for command
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t3] CLI is called with invalid input then: apply with empty plan file shows clear error: apply empty plan error 1`] = `
"✖ apply failed: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at <anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:59:37[90m)[39m
    at async executeApplyCommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:51:16[90m)[39m
    at async Command.<anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:80:9[90m)[39m
    at async Command.parseAsync [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1122:5[90m)[39m
    at async invoke [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:93:3[90m)[39m
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t3] CLI is called with invalid input then: apply with invalid plan file syntax shows clear error: apply invalid syntax error 1`] = `
"✖ apply failed: SyntaxError: Unexpected token 'h', "this is not"... is not valid JSON
    at JSON.parse (<anonymous>)
    at <anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:59:37[90m)[39m
    at async executeApplyCommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:51:16[90m)[39m
    at async Command.<anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:80:9[90m)[39m
    at async Command.parseAsync [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1122:5[90m)[39m
    at async invoke [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:93:3[90m)[39m
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t3] CLI is called with invalid input then: apply with nonexistent plan file shows clear error: apply nonexistent plan error 1`] = `
"✖ apply failed: BadRequestError: BadRequestError: plan file not found

{
  "path": "/nonexistent/plan.json",
  "hint": "check that the --plan path points to an extant file"
}
    at <anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:54:13[90m)[39m
    at executeApplyCommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/apply.ts:60:5[90m)[39m
    at Command.<anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:80:34[90m)[39m
    at Command.listener [as _actionHandler] [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:568:17[90m)[39m
    at [90m<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1604:14
    at Command._chainOrCall [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1488:12[90m)[39m
    at Command._parseCommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1603:27[90m)[39m
    at [90m<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1367:27
    at Command._chainOrCall [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1488:12[90m)[39m
    at Command._dispatchSubcommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1363:25[90m)[39m
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t3] CLI is called with invalid input then: plan with invalid wish file syntax shows clear error: plan invalid syntax error 1`] = `
"✖ plan failed: Error: Transform failed with 1 error:
<repo>/src/contract/sdks/.test/.temp/acceptance/run.<timestamp>/invalid-wish.ts:1:5: ERROR: Expected ";" but found "is"
    at failureErrorWithLog [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/esbuild@0.25.12/node_modules/[4mesbuild[24m/lib/main.js:1467:15[90m)[39m
    at [90m<repo>/[39mnode_modules/[4m.pnpm[24m/esbuild@0.25.12/node_modules/[4mesbuild[24m/lib/main.js:736:50
    at responseCallbacks.<computed> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/esbuild@0.25.12/node_modules/[4mesbuild[24m/lib/main.js:603:9[90m)[39m
    at handleIncomingPacket [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/esbuild@0.25.12/node_modules/[4mesbuild[24m/lib/main.js:658:12[90m)[39m
    at Socket.readFromStdout [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/esbuild@0.25.12/node_modules/[4mesbuild[24m/lib/main.js:581:7[90m)[39m
[90m    at Socket.emit (node:events:519:28)[39m
[90m    at addChunk (node:internal/streams/readable:561:12)[39m
[90m    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)[39m
[90m    at Readable.push (node:internal/streams/readable:392:5)[39m
[90m    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)[39m {
  name: [32m'TransformError'[39m
}
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t3] CLI is called with invalid input then: plan with nonexistent wish file shows clear error: plan nonexistent wish error 1`] = `
"✖ plan failed: BadRequestError: BadRequestError: wish file not found

{
  "path": "/nonexistent/path.ts",
  "hint": "check that the --wish path points to an extant file"
}
    at executePlanCommand [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/plan.ts:58:11[90m)[39m
    at async Command.<anonymous> [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:57:9[90m)[39m
    at async Command.parseAsync [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/commander@14.0.2/node_modules/[4mcommander[24m/lib/command.js:1122:5[90m)[39m
    at async invoke [90m(<repo>/[39mnode_modules/[4m.pnpm[24m/declastruct@<version>/node_modules/[4mdeclastruct[24m/src/contract/cli/invoke.ts:93:3[90m)[39m
"
`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent environment: environment SDK not-found returns null 1`] = `null`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent repo config: config SDK not-found returns null 1`] = `null`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent repo: repo SDK not-found returns null 1`] = `null`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent team membership: membership SDK not-found returns null 1`] = `null`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent team repo access: teamRepoAccess SDK not-found returns null 1`] = `null`;

exports[`declastruct CLI workflow given: a declastruct resources file when: [t4] SDK boundary tests (not-found paths) then: SDK get returns null for nonexistent team: team SDK not-found returns null 1`] = `null`;
